--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacToe</title>
-    
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
   <body>
 
+    <div class="window">
+
+      <div class="box x o"id="box1"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box2"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box3"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box4"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box5"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box6"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box7"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box8"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+      <div class="box x o"id="box9"><div class="text"><p id= "O">O</p><p id = "X">X</p></div></div>
+
+    </div>
+
+    <script src="tictac.js"></script>
   </body>
 </html>
